# screen3

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  screen3.html  screen3.py  search.js  search.json  setup.cfg  test_screen3.py
.github/workflows/: ci.yml  docs.yml
examples/: run_screen3_basics.py  run_screen3_downwash.py  run_screen3_meteo.py
src/: .gitignore  DEPVAR.INC.patch  SCREEN3A.FOR.patch  build.sh
