[metadata]
name = screen3
url = https://github.com/zmoon/screen3
author = Zachary Moon
author_email = zlm1@psu.edu
classifiers =
  Programming Language :: Python :: 3
license = MIT
license_file = LICENSE
description = Thin Python wrapper for the SCREEN3 point source dispersion model
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
version = attr: screen3.__version__

[options]
zip_safe = True
install_requires =
  matplotlib
  numpy
  pandas
  requests
python_requires = >= 3.6, < 4
py_modules = screen3

[options.extras_require]
docs =
  pdoc
